  Fixed by letting Lexis coerce character mode entry.status and exit.status 
  to factors for lex.Cst and lex.Xst.

  In split.lexis.1D was the problem with the factor states, they were 
  coerced to numeric when stuffed into the new.Xst matrix. Now states are 
  turned to numeric before the call to split.lexis.1D and the factor 
  attributes reinstituted after the split. 

Changes in 1.0.5

o Typos in documentation of APC functions corrected.

o cutLexis updated to handle various instances by MP.
  A few BxC additions to MP's code:
  - cutLexis2 is renamed cutLexis. BxC's old cutLexis killed.
  - count=FALSE as argument to cutLexis, just calls countLexis if TRUE.
  - cutLexis no longer returns the working column lex.cut
  - cutLexis was missing the attributes "time.scales" and "breaks". Added.
  - cut=<dataframe> is allowed, simplifying cut of split Lexis objects.
  - documentation accordingly altered.

o splitLexis amended so that lex.Xst is returned as a factor if
  lex.Cst is a factor. splitLexis crashed if lex.Cst and lex.Xst were factors.

o Lexis now allows omission of entry.status --- if exit.status is 
  numeric/logical/factor, entry.status (and hence lex.Cst) will be set
  to 0/FALSE/first level. 

o Lexis made sure that lex.Cst and lex.Xst have the same class. If
  they are factors, the set of levels is taken to be the union.

Changes in 1.0.1

o cutLexis now works properly - no it did not!	

o cutLexis now accepts a (smaller) dataframe with cutpoints and states as input.

Changes in 0.9.6

o Bugfix in timeBand, crashed when type="factor" was chosen.
  levels was given as 0:(lengh(breaks)+1), changed to 0:lengh(breaks)

Changes in 0.9.5

o The Lexis definition now assumes that entry is 0 if only one of exit
  or duration are given as a one-component list.

o tab.Lexis is now properly working as a method for Lexis objects.

Changes in 0.9.4

o The lex.-variables in Lexis objects are now called 